      Super Bowl (sound ROM redump showed one byte of difference)
LTD:  Space Poker
WMS:  Black Knight 2000: redumped LG-1 (German) version, startup text is no longer corrupt
      NBA Fastbreak: Changed 2.1, 2.2 & 2.3 to also use the newer sound ROM S3.0
      The Shadow: Fix checksum of LH-6 with wrong text index patch

Clones:
Ali (7-digit conversion Free Play rev. 76)
Bad Girls (alternate set)
Baywatch 3.00 (German)
Beavis and Butt-Head (Class of 1812 MOD)
Big Game (MOD rev. 12)
Black Knight L-2
Bugs Bunny's Birthday Ball LG-2 (German)
Cue Ball Wizard (older display rev.)
Devil's Dare (Sound & Speech alternate set)
Diner LG-2 (German)
Dracula (One Ball MOD)
Elvira and the Party Monsters LG-3 (German) (incomplete dump)
Elvis 1.00
Farfalla (French Speech)
Flipper Football 1.03
Frankenstein 1.03 (Italian)
Galaxy (7-Digit conversion, Fixes & modified rules)
Hook 4.01 (French), 4.00 (incomplete dumps)
Jungle Lord (new tricks) L2 & L3beta (MOD)
Lightning (Free Play & MOD rev. 25)
Metallica 0.52
Mexico 86 (Italian Speech)
Middle Earth (Free Play)
Mr. & Mrs. Pac-Man Pinball (alternate version)
Odin (Prototype)
Pinball Champ (French Speech)
Pin-Bot J-2 (PEMBOT (no relation)) (MOD)
Royal Flush Deluxe rev. 1
Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
Shadow, The LF-4 (French)
Space Riders (Free Play)
Spirit (initial release) & rev. 3 (MOD)
Striker (German Speech), (French Speech)
STTNG LX-8 (MOD) (using the special L-1 sound roms, note that the special callouts can be turned off completely within the game menu)
Swords of Fury LG-2 (German)
Teenage Mutant Ninja Turtles A 0.7 VUK (Prototype)
Terminator 2 L-8.4 (MOD)
Time Machine (Zaccaria, Italian Speech)
Tommy 1.02 (Belgian), 2.01 (Dutch), 3.01 (German)
Transporter the Rescue LA-1
Whirlwind LG-1 (German), LG-2 (German) (no U26 dumps available, seem to work with known one)
White Water P-6 (Prototype)
Wildfyre (One Ball MOD)
Zankor (TMS5220 Italian Speech)

Removed Clones: