@@ -111,12 +111,13 @@ DRIVERNV(blkshpsq)      //Black Sheep Squadron (1979) - using old Stern hardware
 DRIVERNV(atarians)      //Atarians, The (November 1976)
 DRIVERNV(time2000)      //Time 2000 (June 1977)
 DRIVERNV(aavenger)      //Airborne Avenger (September 1977)
+DRIVERNV(aavengef)      //Airborne Avenger (September 1977/March 2024) (Free Play)
 DRIVERNV(midearth)      //Middle Earth (February 1978)
 DRIVERNV(mideartf)      //Middle Earth (February 1978/March 2024) (Free Play)
 DRIVERNV(midearta)      //Middle Earth (Alternate, 197?)
 DRIVERNV(mideartp)      //Middle Earth (Prototype or German, 197?)
 DRIVERNV(spcrider)      //Space Riders (September 1978)
-DRIVERNV(spcridef)      //Space Riders (September 1978/March 2024) (Free Play)
+DRIVERNV(spcridef)      //Space Riders (September 1978/March 2024) (Free Play 1.1)
 DRIVERNV(superman)      //Superman (March 1979)
 DRIVERNV(hercules)      //Hercules (May 1979)
 DRIVERNV(roadrunr)      //Road Runner (Prototype, 1979)
